# forge

./: .env.example  .gitignore  DECISIONS.md  FUTURE.md  Makefile  docker-compose.yml  forge-claude-code-prompt.md
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 23147117d5c9_v3_store_connectors_and_printer_network.py  2ca53dd7cd6a_v5_performance_indexes.py  9c8389979779_initial_schema.py
apps/api/app/: auth.py  celery_app.py  config.py  db.py  main.py  tasks.py
apps/api/app/connectors/: base.py  etsy.py  manual.py  registry.py  shopify.py
apps/api/app/models/: __init__.py  base.py  design.py  filament.py  human_action.py  ledger.py  listing.py  listing_store_link.py  operator.py  opportunity.py  order.py  print_job.py  printer.py  qa_report.py  render.py  store_connection.py  trend.py
apps/api/app/routers/: auth.py  health.py  opportunities.py  printers.py  scoring.py  settings.py  trends.py
apps/api/app/scoring/: scorer.py
apps/api/app/scrapers/: base.py  etsy.py  google_trends.py  makerworld.py  printables.py  reddit.py
apps/api/app/services/: storage.py
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_opportunities.py  test_scorer.py
apps/printer/: main.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/src/app/designs/: page.tsx
apps/web/src/components/: score-ring.tsx  sidebar.tsx
apps/web/src/lib/: api.ts  auth-context.tsx  hooks.ts  query-provider.tsx
(+12 files in other folders)
