[project]
name = "forge-api"
version = "0.1.0"
description = "Forge — autonomous 3D-printing micro-business API"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100,<0.115",
    "uvicorn[standard]>=0.23",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.12",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "httpx>=0.25",
    "psycopg[binary,pool]>=3.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "structlog>=23.2",
    "opentelemetry-api>=1.21",
    "opentelemetry-sdk>=1.21",
    "opentelemetry-instrumentation-fastapi>=0.42b",
    "anthropic>=0.18",
    "boto3>=1.33",
    "trimesh>=4.0",
    "numpy>=1.24",
    "pytrends>=4.9",
    "praw>=7.7",
    "resend>=0.7",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
